# hnc

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE.md  PLAN.md  README.md  pyproject.toml
.claude/skills/duckdb/: SKILL.md
.claude/skills/duckdb/references/: a5.md  arcgis.md  arcgis.sql  attach-db.md  docs-search.md  ducklake.md  geography.md  h3.md  install.md  query.md  read-file.md  read-memories.md  spatial.md  state.md  state.sql
notebooks/: colab.ipynb
scripts/: gen_parcel_aliases.py
src/: aoi.py  cache.py  env.py  frame_to_clip.py  geoparquet_writer.py  inference_cache.py  mapillary_client.py  pipeline.py  roi_summary.py  tribe_runner.py
tests/: test_smoke.py
