[project]
name = "hnc-poc"
version = "0.1.0"
description = "Mapillary AOI to TRIBE v2 brain-encoding to GeoParquet 2.0"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-NC-4.0" }
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    # Cap below 2.0, the spatial axis-order default flips there per v1.5 migration notes.
    "duckdb>=1.5.2,<2",
    "pyarrow>=24.0.0",
    # tribev2 pins numpy==2.2.6, so keep our floor compatible with that.
    "numpy>=2.2,<2.5",
    "tqdm>=4.67.3",
    "typer>=0.25.0",
    "Pillow>=11.3,<13",
    "imageio[ffmpeg]>=2.37.3",
    "huggingface_hub>=1.13.0",
]

[project.optional-dependencies]
tribe = [
    # Pin to the only commit on main, the upstream maintainers may force-push.
    "tribev2 @ git+https://github.com/facebookresearch/tribev2.git@72399081ed3f1040c4d996cefb2864a4c46f5b8e",
    "mne>=1.7",
    "nilearn>=0.10",
    # Match tribev2 upstream's hard caps: torch>=2.5.1,<2.7 ; torchvision>=0.20,<0.22.
    "torch>=2.5.1,<2.7",
    "torchvision>=0.20,<0.22",
    "huggingface_hub>=1.13.0",
]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
hnc-run = "src.pipeline:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # comprehensions
]
ignore = [
    "E501", # line too long, ruff format handles this
]

[tool.ruff.lint.flake8-bugbear]
# typer.Option / typer.Argument in defaults is the idiomatic pattern, allowlist them.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true # tribev2, mne, nilearn lack type stubs

[tool.uv]
# uv reads dependencies from [project], no extra config needed for the basic flow
